| Summary: | ASTERISK-22320: Asterisk 12 Test Suite Failures: pjsip one touch recording tests | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | Asterisk12 |
| Date Opened: | 2013-08-19 12:08:52 | Date Closed: | 2013-08-20 06:33:50 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Tests/testsuite |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The one touch recording tests that Sean Bright so graciously wrote are now failing :-(
* [channels/pjsip/one touch recording/endpoint config|https://bamboo.asterisk.org/bamboo/browse/AST-ATSF-C632TE-1/test/case/1410869] * [channels/pjsip/one touch recording/features config/features configured|https://bamboo.asterisk.org/bamboo/browse/AST-ATSF-C632TE-1/test/case/1410863] * [channels/pjsip/one touch recording/features config/features not configured|https://bamboo.asterisk.org/bamboo/browse/AST-ATSF-C632TE-1/test/case/1410860] Most likely this is due to the features configuration parsing changes that were made. | ||
| Comments: | |||